support windows file paths: c:\xxx